testsuite/tests/grammar/invalid_lexers/case_2.lkt
from common import Example

lexer foo_example {
    Foo <- null
    match p"foo" {
        else send(Foo, 3)
    }
}
